Applied max-height and overflow properties to emails-container to ensure proper scrolling behavior; Updated markAsRead function in EmailIndex to reflect changes

--- a/src/assets/css/pages/email-index.css
+++ b/src/assets/css/pages/email-index.css
@@ -28,6 +28,8 @@
   }
 
   .emails-container {
+    max-height: 100vh;
+    overflow: scroll;
     flex: 1;
     /* background-color: lightgreen; */
     /* border: 4px solid blue; */
